продвигаюсь по книге

--- a/src/discovery.html
+++ b/src/discovery.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Whinepad v.0.0.1</title>
+    <title>Discover components</title>
     <link rel="stylesheet" href="css/main-discovery.min.css">
 </head>
 <body>
